--- a/code/EDA.Rmd
+++ b/code/EDA.Rmd
@@ -116,7 +116,7 @@ Linearity -
 
 Independence of errors - Based on SUB_ID(Subject ID) we confirm each record is an independent sample.
 Multicollinearity - Weight and BMI are highly correlated.
-```{r fig.height=12, fig.width=10}
+```{r fig.width=10}
 # display the first 20 rows
 print(head(dataset, n=20))
 
@@ -139,18 +139,21 @@ print(std)
 # the larger the skew to the left (negative skew value) or right (positive skew value).
 #library(e1071) # the library for skewness
 library(e1071)
+
 skew=apply(set_noID[,c(1:11)], 2, skewness) 
 print(skew)
 
-
 # Correlations
 library(corrplot)
+
 #Full dataset without ID columns
 corrplot(cor(set_noID), method = "number", type = "upper", order = "hclust", 
          tl.col = "black", tl.srt = 45,main="Correlation - Full Dataset")
+
 #Training data set without ID columns
 #split the data into training and validation sets
 library(caret)
+
 set.seed(84)
 validation_index = createDataPartition(dataset$FRACTURE, p=0.75, list=FALSE)
 validationData = set_noID[-validation_index,]
@@ -159,23 +162,27 @@ corrplot(cor(trainingData), method = "number", type = "upper", order = "hclust",
          tl.col = "black", tl.srt = 45, main="Correlation - Training Dataset")
 
 
-# Data visualizations %%%%%%
+# Data visualizations
 dataset_numeric = numericVar
+
 #Histograms
 par(mfrow=c(3,4)) # put four figures in a row (2*4)
 for (i in 1:4) {
   hist(dataset_numeric[,i],main=names(dataset_numeric)[i])
 }
+
 #Density Plots
 par(mfrow=c(3,4))
 for(i in 1:4) {
   plot(density(dataset_numeric[,i]), main=names(dataset_numeric)[i])
 }
+
 #Box And Whisker Plots
 par(mfrow=c(3,4))
 for(i in 1:4) {
   boxplot(dataset_numeric[,i], main=names(dataset_numeric)[i])
 }
+
 #Barplots, which is used to count the accurances for categorical attributes 
 dataset_categorical = set_noID[,-c(2:5)]
 par(mfrow=c(1,3))
@@ -195,14 +202,17 @@ corrplot(correlations1, methods="circle")
 # pair-wise scatterplots of the numeric attributes
 par(mfrow=c(1,1))
 pairs(dataset_numeric)
+
 #Scatterplot Matrix By Class (use different color to distinguish different class)
 par(mfrow=c(1,1))
 pairs(dataset_numeric, col=dataset[,5])
 
 #Density By Class
 library(caret)
+
 # load the data
 data(iris)
+
 # density plots for each attribute by class value
 x <- dataset_numeric
 y <- dataset[,5]
@@ -211,7 +221,6 @@ par(mfrow=c(1,1))
 featurePlot(x=dataset_numeric, y=dataset[,5], plot="density", scales=scales)
 #Box And Whisker Plots By Class
 featurePlot(x=dataset_numeric, y=dataset[,5], plot="box")
-
 ```
 #Logistic Regression
 ## Train / Test
@@ -252,6 +261,7 @@ Weight, height, BMI, Premeno, Armassist, and Smoke are not statistically signifi
 ```{r}
 ##glmnet
 dat <- categoricalVar
+
 #Get Training Set
 dat.train <- trainingData
 
@@ -295,7 +305,6 @@ library(RColorBrewer)
 x<-t(dat.train.x)
 colnames(x)<-dat.train.y
 pheatmap(x,annotation_col=data.frame(FRACTURE=dat.train.y),scale="row",legend=T,color=colorRampPalette(c("blue","white", "red"), space = "rgb")(100))
-
 
 ##logistic regression
 dat.train.x <- as.matrix(dat.train.x)
